--- a/src/template/package.json
+++ b/src/template/package.json
@@ -21,9 +21,11 @@
     "mini-css-extract-plugin": "^0.9.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "workbox-webpack-plugin": "^5.1.2"
   },
   "dependencies": {
     "react": "^16.13.1",
