--- a/src/template/package.json
+++ b/src/template/package.json
@@ -19,9 +19,11 @@
     "css-loader": "^3.5.2",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "resolve": "^1.15.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^2.3.5",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
