--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/patelvimal/reactjs-cli#readme",
   "dependencies": {
     "chalk": "^4.0.0",
+    "commander": "^5.0.0",
     "figlet": "^1.3.0",
     "inquirer": "^7.1.0",
     "ora": "^4.0.3"
