--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "reactjs-cli",
   "version": "1.0.0",
   "description": "",
-  "main": "./bin/create-app",
   "bin": {
-    "@patelvimal/reactjs-cli": "./bin/react-app",
-    "reactjs-cli": "bin/react-app"
+    "reactjs-cli": "./bin/create-app.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,5 +25,9 @@
     "figlet": "^1.3.0",
     "inquirer": "^7.1.0",
     "ora": "^4.0.3"
-  }
+  },
+  "files": [
+    "lib",
+    "bin"
+  ]
 }
