Install react library at runtime

--- a/lib/app/template/package.json
+++ b/lib/app/template/package.json
@@ -29,8 +29,5 @@
     "webpack-dev-server": "^3.10.3",
     "workbox-webpack-plugin": "^5.1.2"
   },
-  "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  }
+  "dependencies": {}
 }
