--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "bin": {
-    "reactjs-cli": "./bin/create-app.js"
+    "react-cli": "./bin/react-cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
