--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/patelvimal/reactjs-cli.git"
   },
-  "keywords": [],
+  "keywords": ["react", "cli", "reactjs"],
   "author": "",
   "license": "ISC",
   "bugs": {
