--- a/lib/app/template/package.json
+++ b/lib/app/template/package.json
@@ -4,7 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --open",
     "build": "webpack --config=webpack.config.js --mode=production"
   },
   "keywords": [],
