Updated the scope of package

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-cli-app",
+  "name": "@vimalpatel/react-cli",
   "version": "1.0.0",
   "description": "",
   "bin": {
-    "react-cli-app": "./bin/react-cli.js"
+    "react-cli": "./bin/react-cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
